# TS-Enhancer-Extreme

./: .gitattributes  .gitignore  README.md  README2zh-Hans.md  README2zh-Hant.md  README4en-US.md  README4zh-Hant.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle
dex/: build.gradle.kts
dex/src/main/java/ts/enhancer/xtr/: ConflictCheck.java  Logger.java  ModifyExcute.java
module/: build.gradle.kts
module/src/: README.md  action.sh  customize.sh  post-fs-data.sh  service.sh
module/src/binaries/: tseed
module/src/lib/: util_functions.sh
module/src/libraries/: util_functions.sh
module/src/script/: state.sh  util_functions.sh
module/src/webroot/: app.js  config.json  core.js  index.html
module/src/webroot/css/: css2.css  md3.css
module/src/webroot/css/pages/: about.css  settings.css  tools.css
module/src/webroot/pages/: about.js  settings.js  status.js  tools.js
module/src/webroot/svg/: icons.js
module/src/webroot/translations/: en.json  ru.json  zh.json
tseed/: Cargo.toml  cargolite
tseed/src/: main.rs
tsees/: Cargo.toml  build.gradle.kts
tsees/src/: main.rs
tseev/: Cargo.toml
tseev/src/: lib.rs
