cargo-features = ["trim-paths"]

[package]
name = "tseev"
edition = "2024"
authors = ["XtrLumen"]

[lib]
name = "verify"
crate-type = ["dylib"]

[dependencies]
hex = "0.4"
blake3 = "1.8"
ed25519-compact = "2.0"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "z"
trim-paths = "all"
incremental = false
codegen-units = 1
